test/Fail/Issue6805.agda
module Issue6805 where

opaque
  A = Set
